objects/GRS_Opportunity_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EGR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctID__c</fullName>
        <formula>Opportunity_Name__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AcctID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bill_Type__c</fullName>
        <label>Current Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>ASO &amp; Direct</fullName>
                </value>
                <value>
                    <fullName>ASO &amp; Self</fullName>
                </value>
                <value>
                    <fullName>ASO &amp; Split</fullName>
                </value>
                <value>
                    <fullName>Premium &amp; Direct</fullName>
                </value>
                <value>
                    <fullName>Premium &amp; Self</fullName>
                </value>
                <value>
                    <fullName>Premium &amp; Split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_ID_Cards__c</fullName>
        <label>Custom ID Cards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_Any_Other_Changes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Group Structure, Contact Information, etc
This Text Box has a 255 character limit</inlineHelpText>
        <label>Describe GRS Changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enrollment_Process__c</fullName>
        <label>Enrollment Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Tape</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Spreadsheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Change_in_Enrollment__c</fullName>
        <label>Expected Change in Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>For_Medical_Renewing_with_Change__c</fullName>
        <label>For Medical, Renewing with Change?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Plan Changes for 2018 (Current Plan)</fullName>
                </value>
                <value>
                    <fullName>Custom Plan Changes for 2018 (Current Plan)</fullName>
                </value>
                <value>
                    <fullName>Changing to a New Standard Plan for 2018</fullName>
                </value>
                <value>
                    <fullName>Changing to a New Custom Plan for 2018</fullName>
                </value>
                <value>
                    <fullName>No Changes to Current Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>For_Rx_Renewing_with_Change__c</fullName>
        <label>For Rx, Renewing with Change?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Plan Changes for 2018 (Current Plan)</fullName>
                </value>
                <value>
                    <fullName>Custom Plan Changes for 2018 (Current Plan)</fullName>
                </value>
                <value>
                    <fullName>Changing to a New Standard Plan for 2018</fullName>
                </value>
                <value>
                    <fullName>Changing to a New Custom Plan for 2018</fullName>
                </value>
                <value>
                    <fullName>No Changes to Current Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Enrollment_Process_Changed__c</fullName>
        <label>Has Enrollment Process Changed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_There_Been_a_Change_in_Broker__c</fullName>
        <inlineHelpText>If New Broker, Please Note:
Broker Commissions cannot be paid without complete broker information. 
If writing broker is new, provide copies of the W-9 Broker License. 
If the payee is different at renewal please provide copy of broker record letter.</inlineHelpText>
        <label>Has There Been a Change in Broker?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Broker_Changed_has_W_9_Been_Received__c</fullName>
        <label>If Broker Changed has W-9 Been Received?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Broker_Changed_is_Broker_Appointed_i__c</fullName>
        <inlineHelpText>Only answer this, if the Broker has changed.</inlineHelpText>
        <label>Is New Broker Appointed in Situs State?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_MA_HMO_Identify_Service_Area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This Text Box has a 100 character limit</inlineHelpText>
        <label>If MA HMO, Identify Service Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Reason_For_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This Text Box has a 255 character limit</inlineHelpText>
        <label>If Yes, Reason For Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_Payee_an_Agency__c</fullName>
        <inlineHelpText>If Yes, Please Complete the following fields:</inlineHelpText>
        <label>Is the Payee an Agency?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This Text Box has a 50 character limit</inlineHelpText>
        <label>MA Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Only_Standalone_PDP_Contact_Info__c</fullName>
        <inlineHelpText>Complete following fields only if the group has an MA Only plan(s) with Anthem, and their Pharmacy coverage is a Standalone PDP plan with another carrier.</inlineHelpText>
        <label>MA Only - Standalone PDP Contact Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applicable</fullName>
                </value>
                <value>
                    <fullName>Not Applicable (If RDS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_ID_Cards_Required__c</fullName>
        <label>New ID Cards Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Custom notifications require compliance approval which takes up to 10 business days</inlineHelpText>
        <label>Open Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment__c</fullName>
        <label>Open Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OppID__c</fullName>
        <formula>Opportunity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>EGR</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Out_of_County_Rx__c</fullName>
        <inlineHelpText>Senior RxPlus Out of Country Rx Emergency Benefit Apply?</inlineHelpText>
        <label>Out of Country Rx</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Guarantees_Risk_Amount__c</fullName>
        <label>Performance Guarantees: Risk $ Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantees_Type__c</fullName>
        <inlineHelpText>Please be advised that this field is not populated on any form.</inlineHelpText>
        <label>Performance Guarantees Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Guarantees__c</fullName>
        <label>Performance Guarantees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questionnaire_RFI__c</fullName>
        <label>Questionnaire/RFI:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Bill_Type__c</fullName>
        <label>Renewal Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>ASO &amp; Direct</fullName>
                </value>
                <value>
                    <fullName>ASO &amp; Self</fullName>
                </value>
                <value>
                    <fullName>ASO &amp; Split</fullName>
                </value>
                <value>
                    <fullName>Premium &amp; Direct</fullName>
                </value>
                <value>
                    <fullName>Premium &amp; Self</fullName>
                </value>
                <value>
                    <fullName>Premium &amp; Split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GRS Opportunity Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GRS Opportunity Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRS Opportunity Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>